# python-poetry-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst  src.rst
src/: calc.py
tests/: test_calc.py
